name:                gi-async-trial
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/murat.ozsoyler/gi-async-trial#readme
license:             BSD3
license-file:        LICENSE
author:              Murat Özsöyler
maintainer:          murat.ozsoyler@gmail.com
copyright:           Public Domain
category:            haskell-gi async
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gi-async-trial
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall 
                      -fno-warn-unused-do-bind 
                      -fwarn-incomplete-patterns 
                      -fno-warn-name-shadowing 
                      -fno-warn-unused-do-bind 
                      -Wredundant-constraints 
                      -Wincomplete-uni-patterns 
                      -threaded 
                      -with-rtsopts=-N
  pkgconfig-depends:  glib-2.0 >= 2.32
  build-depends:      base >= 4.7 && < 5
                    , async
                    , gi-gio
                    , gi-glib
                    , gi-gtk
                    , haskell-gi-base
                    , text
